# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: general_logic_games  greeting.py  logic_games.py
brain_games/games/: calc.py  calc_games  calc_games.py  cli.py  even.py  even_games.py  gcd.py  gcd_games.py  greeting.py  greeting_calc.py  is_prime.py  logic_games.py  prime.py  prime_games.py  primer.py  primer2.py  primer3.py  progression.py  progression_games.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
